@@ -26,12 +26,15 @@
 			<TABLE width="100%" cellpadding="1">
 			    <TR>
 			    	<TD width="100%" colspan="2">
-				    <SELECT size="1" name="search[userid]" {tip text="select customer from list or enter his data if is not a customer"}>
+				    <SELECT size="1" name="search[userid]" {tip text="select customer from list or enter his data if is not a customer"} onChange="document.forms['search'].elements['search[custid]'].value=document.forms['search'].elements['search[userid]'].value">
 					<OPTION value="0">{t}- all customers -{/t}</OPTION>
 					{foreach from=$userlist item=userlist}
 					    <OPTION value="{$userlist.id}" {if $userlist.id == $search.userid}SELECTED{/if}>{$userlist.username} ({$userlist.id|string_format:"%04d"})</OPTION>
 					{/foreach}
 				    </SELECT>
+				    <NOBR>{t}or Customer ID:{/t}
+				    <INPUT TYPE="TEXT" NAME="search[custid]" VALUE="{$search.custid}" SIZE="5" onChange="document.forms['search'].elements['search[userid]'].value=document.forms['search'].elements['search[custid]'].value" {tip trigger="custid"}>
+				    </NOBR>
 				</TD>
 			    </TR>
 			    <TR>
